Fix spacing for features

--- a/src/components/Home/Features/features.module.scss
+++ b/src/components/Home/Features/features.module.scss
@@ -9,7 +9,7 @@
 	padding-bottom: 10px;
 
 	.image {
-		width: 600px;
+		width: 460px;
 	}
 
 	.imageAlt {
@@ -21,10 +21,10 @@
 	}
 
 	.text {
-		width: 500px;
-		margin-top: 20px;
-		text-align: left;
-		margin-left: 40px;
+		width: 530px;
+    margin-top: 20px;
+    text-align: left;
+    margin-left: 80px;
 
 		.title {
 			margin-bottom: 10px;
