--- a/src/components/Home/Testimonials/SpeechBubble/speechBubble.module.scss
+++ b/src/components/Home/Testimonials/SpeechBubble/speechBubble.module.scss
@@ -3,6 +3,7 @@
 	display: flex;
 	align-items: center;
 	flex-direction: column;
+	padding-left: 20px;
 
 	.speechSquare {
 		background: #3d5066;
