--- a/src/components/Home/Testimonials/testimonials.module.scss
+++ b/src/components/Home/Testimonials/testimonials.module.scss
@@ -1,6 +1,6 @@
 .container {
 	display: flex;
-	justify-content: space-evenly;
+	justify-content: center;
 	align-items: center;
 	padding-top: 60px;
 	padding-bottom: 60px;
